gen/healthcare/v1beta1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-healthcare1_beta1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/healthcare/v1beta1/lib)
error[E0433]: failed to resolve: unresolved import
     --> gen/healthcare/v1beta1/lib/src/lib.rs:15562:45
      |
15562 |                         view: Option<crate::messages::params::GetView>,
      |                                             ^^^^^^^^
      |                                             |
      |                                             unresolved import
      |                                             help: a similar path exists: `crate::projects::locations::datasets::hl_7v2_stores::messages`

error[E0433]: failed to resolve: unresolved import
     --> gen/healthcare/v1beta1/lib/src/lib.rs:15579:43
      |
15579 |                             value: crate::messages::params::GetView,
      |                                           ^^^^^^^^
      |                                           |
      |                                           unresolved import
      |                                           help: a similar path exists: `crate::projects::locations::datasets::hl_7v2_stores::messages`

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:2476:13
     |
2476 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `datasets::DatasetsActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:2529:17
     |
2529 |                 datasets::DatasetsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `datasets::DatasetsActions { /* fields */ }`?

error[E0423]: expected value, found struct `dicom_stores::DicomStoresActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:3103:21
     |
3103 |                     dicom_stores::DicomStoresActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `dicom_stores::DicomStoresActions { /* fields */ }`?

error[E0423]: expected value, found struct `fhir_stores::FhirStoresActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:3107:21
     |
3107 |                     fhir_stores::FhirStoresActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `fhir_stores::FhirStoresActions { /* fields */ }`?

error[E0423]: expected value, found struct `hl_7v2_stores::Hl7V2StoresActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:3111:21
     |
3111 |                     hl_7v2_stores::Hl7V2StoresActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `hl_7v2_stores::Hl7V2StoresActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:3115:21
     |
3115 |                     operations::OperationsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `studies::StudiesActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:4741:25
     |
4741 |                         studies::StudiesActions
     |                         ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `studies::StudiesActions { /* fields */ }`?

error[E0423]: expected value, found struct `series::SeriesActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:6887:29
     |
6887 |                             series::SeriesActions
     |                             ^^^^^^^^^^^^^^^^^^^^^ did you mean `series::SeriesActions { /* fields */ }`?

error[E0423]: expected value, found struct `instances::InstancesActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:7796:33
     |
7796 |                                 instances::InstancesActions
     |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instances::InstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `frames::FramesActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:8463:37
     |
8463 |                                     frames::FramesActions
     |                                     ^^^^^^^^^^^^^^^^^^^^^ did you mean `frames::FramesActions { /* fields */ }`?

error[E0423]: expected value, found struct `fhir::FhirActions`
    --> gen/healthcare/v1beta1/lib/src/lib.rs:9739:25
     |
9739 |                         fhir::FhirActions
     |                         ^^^^^^^^^^^^^^^^^ did you mean `fhir::FhirActions { /* fields */ }`?

error[E0423]: expected value, found struct `messages::MessagesActions`
     --> gen/healthcare/v1beta1/lib/src/lib.rs:13925:25
      |
13925 |                         messages::MessagesActions
      |                         ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `messages::MessagesActions { /* fields */ }`?

warning: unreachable expression
     --> gen/healthcare/v1beta1/lib/src/lib.rs:15141:33
      |
15141 | /                                 Ok(match value {
15142 | |                                     _ => {
15143 | |                                         return Err(::serde::de::Error::custom(format!(
15144 | |                                             "invalid enum for #name: {}",
...     |
15147 | |                                     }
15148 | |                                 })
      | |__________________________________^
      |
      = note: #[warn(unreachable_code)] on by default

error: aborting due to 14 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-healthcare1_beta1`.

To learn more, run the command again with --verbose.
